# CourseWork

./: CMakeLists.txt  Readme.md  build.bat  conanfile.txt
src/: BatchNormalization.cu  BatchNormalization.h  ConvLayer.cu  ConvLayer.h  CpuHelpTools.cpp  CpuLayers.cpp  CpuLayers.h  DatasetReaderInterface.h  FullyConnected.cu  FullyConnected.h  HelpTools.cu  HelpTools.h  Layer.h  LayersBuilder.cpp  LayersBuilder.h  LayersEnum.h  LayersTypes.h  MathFunctions.cu  MathFunctions.h  MaxPooling.cu  MaxPooling.h  MnistDatasetReader.cpp  MnistDatasetReader.h  NeuralNet.cu  NeuralNet.h  ReLU.cu  ReLU.h  SoftMax.cu  SoftMax.h  StretchLayer.cu  StretchLayer.h  Tensor.cu  Tensor.h  kernel.cu  main.cpp  main.cu
src/Common/: HelpTools.cu  Tensor.cu  Tensor.h
src/DatasetReader/: DatasetReaderInterface.h  MnistDatasetReader.cpp  MnistDatasetReader.h  RtsdDataSetReader.cpp  RtsdDataSetReader.h  UniversalDatasetReader.cpp  UniversalDatasetReader.h
src/NeuralNet/: BatchNormalization.cu  BatchNormalization.h  ConvLayer.cu  ConvLayer.h  CpuHelpTools.cpp  CpuHelpTools.h  CpuLayers.cpp  CpuLayers.h  FullyConnected.cu  FullyConnected.h  Layer.h  LayersBuilder.cpp  LayersBuilder.h  MathFunctions.cu  MathFunctions.h  MaxPooling.cu  MaxPooling.h  NeuralNet.cu  NeuralNet.h  ReLU.cu  ReLU.h  SoftMax.cu  SoftMax.h  StretchLayer.cu  StretchLayer.h
src/Visualization/: NeuralNetVisualizer.cpp  NeuralNetVisualizer.h
weights/: config.json
